# advent_of_code

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml
2021/: README.md
2021/01/: main.py
2021/02/: task01.py  task02.py
2021/03/: main.py
2021/04/: main.py
2021/05/: main.py
2021/06/: main.py
2021/07/: main.py
2021/08/: main.py
2021/09/: main.py
2021/10/: main.py
2021/11/: main.py
2021/12/: main.py
2021/13/: main.py
2021/14/: main.py
2021/15/: main.py
2021/16/: main.py
2021/17/: main.py
2021/18/: explode5.txt  main.py
2021/19/: main.py
2021/20/: main.py
2021/21/: main.py
2021/22/: example0.txt  main.py
2021/23/: baseline_solution.py  main.py
2021/24/: main.py
2021/25/: main.py
2022/: README.md  environment.yml
2022/01/: main.py
2022/02/: main.py
2022/03/: main.py
2022/04/: main.py
2022/05/: main.py
2022/06/: main.py
2022/07/: main.py
2022/08/: main.py
2022/09/: main.py
2022/10/: main.py
2022/11/: main.py
2022/12/: main.py
2022/13/: main.py
2022/14/: main.py
2022/15/: main.py
2022/16/: main.py
2022/17/: false_guesses.txt  main.py
2022/18/: main.py
2022/19/: false_guesses.txt  main.py
2022/20/: main.py
2022/21/: main.py
2022/22/: main.py
2022/23/: false_guesses.txt  main.py
2022/24/: main.py
2022/25/: main.py
2023/: README.md  go.mod  requirements.txt
2023/examples/: day08_4.txt  (+5 more)
2024/: README.md  python.code-workspace  rust.code-workspace
2024/python/: README.md  pyproject.toml
2024/python/src/aoc2024/: day24.py  main.py
2025/: README.md
(+127 files in other folders)
